--- a/Cucklist/Cucklist.csproj
+++ b/Cucklist/Cucklist.csproj
@@ -37,4 +37,8 @@
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
